<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="317dp"
            android:layout_height="25dp" android:id="@+id/question_text" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="103dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp" android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="54dp" android:layout_marginRight="54dp" />
    <Button
            android:text="@string/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/true_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp" android:layout_marginStart="80dp" android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/question_text" />
    <Button
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/false_button" android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/question_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp" android:layout_marginRight="80dp" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/next_button" android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/true_button" android:text="@string/next_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp" android:layout_marginRight="80dp" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/previous_button" android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/true_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp" android:layout_marginStart="80dp" android:text="@string/previous_button" />
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cheat_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="161dp" android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp" android:layout_marginRight="162dp" android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/next_button" android:text="@string/cheat_button" />
</android.support.constraint.ConstraintLayout>